--- a/Scorecard/Scorecard.csproj
+++ b/Scorecard/Scorecard.csproj
@@ -71,9 +71,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\ExcelDAL.cs" />
-    <Compile Include="Controllers\ExcelInterop.cs" />
-    <Compile Include="Controllers\MainController.cs" />
+    <Compile Include="ExcelDAL.cs" />
+    <Compile Include="ExcelInterop.cs" />
+    <Compile Include="MainController.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\CustomerData.cs" />
     <Compile Include="Program.cs" />
